# fr-format

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  generate_docs.py  output_validator_template.md  pyproject.toml  pyrightconfig.json  validator_template.md.jinja  validators.md  validators.py
.circleci/: config.yaml  config.yml
.github/workflows/: publish.yaml  workflow.yaml
docs/: dev_documentation.md  formats.md  output_validator_list.md  output_validators.md
docs/dev/: README.md
frformat/: __init__.py  common.py  custom_format.py  formatter.py  set_format.py  versioned_set.py
frformat/formats/: canton.py  canton_frozenset.py  code_commune_insee.py  code_commune_insee_frozenset.py  code_departement.py  code_fantoir.py  code_pays.py  code_postal.py  code_region.py  code_rna.py  commune.py  commune_frozenset.py  coordonnees_gps_francaises.py  departement.py  id_rnb.py  latitude_l93.py  longitude_l93.py  nomenclature_acte_format.py  numero_departement.py  pays.py  region.py  siren.py  siret.py
src/fr-format/: custom_format.py
src/frformat/: __init__.py  code_commune_insee.py  code_postal.py  code_postal_set.py  code_rna.py  common.py  custom_format.py  departement.py  enum_format.py  formatter.py  french_gps_coordinates.py  geo_enum_format.py  geo_enum_format_with_versionedset.py  geo_format.py  get_values.py  get_values_script.py  infra_file_reader.py  insee_city_code.py  insee_city_code_set.py  new_format.py  nomenclature_acte_format.py  numero_departement.py  options.py  postal_code.py  postal_code_set.py  set_format.py  siren.py  siret.py  siret_format.py  versioned_set.py  versions.py
src/tests/: geo_testing.py  new_testing.py  test_canton_with_new_version.py  test_code_commune_insee.py  test_code_postal.py  test_code_rna.py  test_commune.py  test_coordonnees_gps_francaises.py  test_departement.py  test_french_gps_coordinates.py  test_geo_data_format.py  test_geo_data_validation.py  test_geo_format.py  test_geo_fr.py  test_geo_fr_with_cog.py  test_geo_with_versionedset.py  test_insee_city_code.py  test_insee_geo_format.py  test_latest.py  test_new_geo_fr.py  test_nomenclature_acte_format.py  (+11 more)
tests/: test_coordonnees_gps_francaises.py  test_geo_format.py  test_idrnb.py  test_set_format.py  test_siren_siret.py  test_validator_with_options.py  test_versionedset.py
utils/: formats_template.md.jinja  generate_docs.py  validator_template.md.jinja  validators.py
(+51 files in other folders)
