[tool.poetry]
name = "frformat"
version = "0.4.1"
description = ""
authors = [
  "Pierre Camilleri <22995923+pierrecamilleri@users.noreply.github.com>",
  "Amélie Rondot"
]
license = "AGPL-3.0"
readme = "README.md"
packages = [
  {include = "frformat", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
python-stdnum = "^1.19"
shapely = "^2.0.2"


[tool.poetry.group.linting.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pyright = "^1.1.369"
flake8 = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
